// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute info renders correctly 1`] = `
<div>
  <div
    class="wcpay-dispute-info"
  >
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Dispute date: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        Nov 1, 2019
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Disputed amount: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        $10.00 USD
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Respond by: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        Nov 8, 2019 - 2:46AM
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Reason: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        Fraudulent
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Order: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        <a
          data-link-type="external"
          href="http://test.local/order/1"
        >
          1
        </a>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Customer: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        Mock customer
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        class="wcpay-dispute-info-key"
      >
        Transaction ID: 
      </span>
      <span
        class="wcpay-dispute-info-value"
      >
        <a
          data-link-type="wc-admin"
          href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_mock"
        >
          ch_mock
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`Dispute info renders loading state 1`] = `
<div>
  <div
    class="wcpay-dispute-info"
  >
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Dispute date: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Created date
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Disputed amount: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Amount
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Respond by: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Due by date
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Reason: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Dispute reason
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Order: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Order link
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Customer: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Customer name
        </span>
      </span>
    </div>
    <div
      class="wcpay-dispute-info-item"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-inline"
      >
        <span
          class="wcpay-dispute-info-key"
        >
          Transaction ID: 
        </span>
        <span
          class="wcpay-dispute-info-value"
        >
          Transaction link
        </span>
      </span>
    </div>
  </div>
</div>
`;
